--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ background-size: cover;
 </head>
 <body>
 
-<br><a href="index2.html">Records</a></center>
-<br><a href="index3.html">About speedcubers</a></center>
-<br><a href="index4.html">how to solve the rubik's cube</a></center>
+<br><a href="worldrecords.html">Records</a></center>
+<br><a href="allaboutspeedcubers.html">About speedcubers</a></center>
+<br><a href="howtosolvearubikscube.html">how to solve the rubik's cube</a></center>
 </body>
 </html>
