--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ background-size: cover;
 <body>
 
 <br><a href="worldrecords.html">Records</a></center>
-<br><a href="allaboutspeedcubers.html">About speedcubers</a></center>
+<br><a href="aboutspeedcubers.html">About speedcubers</a></center>
 <br><a href="howtosolvearubikscube.html">how to solve the rubik's cube</a></center>
 </body>
 </html>
